<resources>
    <string name="app_name">Simple Weather</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Enter new location or select below</string>
    <string name="add_place">Add</string>
    <string name="cb_pressure">Pressure</string>
    <string name="cb_humidity">Humidity</string>
    <string name="cb_wind">Wind</string>
    <string name="cb_precipitation">Precipitation</string>
    <string name="txt_pressure">Pressure %s mm Hg</string>
    <string name="txt_humidity">Humidity %s </string>
    <string name="txt_wind">Wind %s, %s m/s</string>
    <string name="btn_OK">OK</string>
    <string name="txt_ChooseParameters">Choose parameters to show</string>
    <string name="txt_wind_0">east</string>
    <string name="txt_wind45">north-east</string>
    <string name="txt_wind90">north</string>
    <string name="txt_wind135">north-west</string>
    <string name="txt_wind180">west</string>
    <string name="txt_wind225">south-west</string>
    <string name="txt_wind270">south</string>
    <string name="txt_wind315">south-east</string>
    <string name="txt_test">TEST STRING</string>
</resources>
