<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/default_margin"
    android:gravity="center"
    android:orientation="vertical" >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_radius"
        android:elevation="@dimen/cardview_elevation"
        android:layout_margin="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ChooseParameters"
                style="@style/WeatherText1"
                android:gravity="center"/>

            <CheckBox
                android:id="@+id/cbPressure"
                style="@style/WeatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_pressure" />

            <CheckBox
                android:id="@+id/cbHumidity"
                style="@style/WeatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_humidity" />

            <CheckBox
                android:id="@+id/cbWind"
                style="@style/WeatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_wind" />

            <CheckBox
                android:id="@+id/cbPrecipitation"
                style="@style/WeatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_precipitation" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/btn_OK" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>